# BittyTax

./: .flake8  .gitignore  .pylint_dictionary  .pylintrc  .pylintrc-27  BittyTax_Audit_Log.xlsx  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_parser_request.yml  3_feature_request.yml  bug_report.yml  config.yml  parser_request.yml
.github/workflows/: black.yml  ci.yml  publish.yml  spell.yml
.run/: bittytax.run.xml  bittytax_conv.run.xml  bittytax_price.run.xml
bittytax/: audit.py  bittytax.py  config.py  convert.py  datasource.py  exceptions.py  export_records.py  holdings.py  import_records.py  parser.py  price.py  pricedata.py  record.py  report.py  tax.py  transactions.py  valueasset.py  version.py
bittytax/audit_fix/: asset.py  coinbase.py
bittytax/config/: bittytax.conf
bittytax/conv/: bittytax_conv.py  datafile.py  datamerge.py  dataparser.py  datarow.py  exceptions.py  out_record.py  output_csv.py  output_excel.py
bittytax/conv/mergers/: __init__.py  bscscan.py  etherscan.py  hecoinfo.py  polygonscan.py  snowtrace.py
bittytax/conv/parsers/: __init__.py  accointing.py  barclays.py  binance.py  binance_assets.py  bitfinex.py  bitpanda.py  bitstamp.py  bittrex.py  bittylicious.py  blockchain.py  blockchaincom.py  blockfi.py  bnktothefuture.py  bscscan.py  celsius.py  cexio.py  cgtcalculator.py  changetip.py  circle.py  coinbase.py  coinbasepro.py  coinfloor.py  coinlist.py  coinmetro.py  coinomi.py  cointracking.py  cryptocom.py  cryptocom_exchange.py  cryptopia.py  cryptsy.py  electrum.py  energyweb.py  etherscan.py  etherscan2.py  exodus.py  ftx.py  gatehub.py  generic.py  gravity.py  (+32 more)
bittytax/parsers/: __init__.py  barclays.py  binance.py  bitfinex.py  bitstamp.py  bittrex.py  changetip.py  circle.py  coinbase.py  coinbasepro.py  coinfloor.py  cryptopia.py  cryptsy.py  electrum.py  etherscan.py  gatehub.py  ledgerlive.py  okex.py  poloniex.py  qtwallet.py  tradesatoshi.py  trezor.py  uphold.py  wirex.py
bittytax/price/: assetdata.py  bittytax_asset.py  bittytax_price.py  datasource.py  exceptions.py  pricedata.py  valueasset.py
bittytax/templates/: audit.html  capital_gains.html  ct_estimate.html  fixed_estimate.html  income.html  price_data.html  tax_report.html
config/: bittytax.conf
data/: BittyTax_Audit_Log.xlsx  example.csv  example.xlsx
data/HMRC-Examples/: CRYPTO22252.xlsx  CRYPTO22255.xlsx  CRYPTO41350-2.xlsx  CRYPTO61674.xlsx  CRYPTO61676.xlsx  CRYPTO61678.xlsx
scripts/apple/: notarise.sh  sign.sh  verify.sh
scripts/apple/BittyTax Accounting Tool.app/Contents/: CodeResources  Info.plist
scripts/apple/BittyTax Acounting Tool.app/Contents/: Info.plist
scripts/apple/BittyTax Audit Tool.app/Contents/: Info.plist
scripts/apple/BittyTax Config.app/Contents/: CodeResources  Info.plist
scripts/apple/BittyTax Conversion Tool.app/Contents/: CodeResources  Info.plist
scripts/apple/BittyTax Install (Latest Release).app/Contents/: CodeResources  Info.plist
scripts/apple/BittyTax Update (Unreleased).app/Contents/: CodeResources  Info.plist
scripts/apple/src/: BittyTax Accounting Tool.applescript  BittyTax Config.applescript  BittyTax Conversion Tool.applescript  BittyTax Install (Latest Release).applescript  BittyTax Update (Unreleased).applescript
scripts/batch/: BittyTax Accounting Tool.bat  BittyTax Audit Tool.bat  BittyTax Config.bat  BittyTax Conversion Tool.bat  BittyTax Install (Latest Release).bat  BittyTax Update (Unreleased).bat
scripts/powershell/: BittyTax Accounting Tool.bat  BittyTax Accounting Tool.ps1  BittyTax Conversion Tool.bat  BittyTax Conversion Tool.ps1
src/bittytax/: audit.py  audit_excel.py  bittytax.py  bt_types.py  config.py  constants.py  deribit_get_funding_fees.py  exceptions.py  export_records.py  holdings.py  import_records.py  output_csv.py  output_f8949.py  output_irs.py  output_txf.py  record.py  rename_deribit_files.py  report.py  report_excel.py  t_record.py  t_row.py  tax.py  tax_event.py  transactions.py  types.py  utils.py  version.py
src/bittytax/config/: bittytax.conf
src/bittytax/conv/: BittyTax_Records.xlsx  bittytax_conv.py  datafile.py  datamerge.py  dataparser.py  datarow.py  exceptions.py  out_record.py  output_csv.py  output_excel.py  spot.xlsx
src/bittytax/conv/mergers/: __init__.py  binance.py  bscscan.py  coinbase.py  coincorner.py  etherscan.py  ftmscan.py  hecoinfo.py  polygonscan.py  snowtrace.py
src/bittytax/conv/parsers/: __init__.py  accointing.py  adalite.py  aptoscan.py  arbiscan.py  ascendex.py  barclays.py  binance.py  binance_us.py  binanceus.py  bitcointaxes.py  bitfinex.py  bitpanda.py  (+97 more)
src/bittytax/price/: assetdata.py  bittytax_price.py  datasource.py  exceptions.py  pricedata.py  valueasset.py
src/bittytax/resources/: README.md  bittytax.conf.template
src/bittytax/templates/: audit.html  audit_report.html  capital_gains.html  cgt_estimate.html  cgt_estimate2.html  cover_page.html  css_styles.html  ct_estimate.html  header_footer.html  holdings.html  holdings_table.html  html_head.html  income.html  logo.html  margin_trading.html  no_gain_no_loss.html  price_data.html  tax_full_report.html  tax_report.html  tax_summary_report.html  yearly_holdings.html
src/python-bidi/: README.md  setup.py
src/python-bidi/bidi/: __init__.py
src/python_bidi/bidi/: __init__.py
src/svglib/: README.md  setup.py
test/HMRC-Examples/: CRYPTO22251.xlsx  CRYPTO22252.xlsx  CRYPTO22253.xlsx  CRYPTO22254.xlsx  CRYPTO22255.xlsx  CRYPTO22256.xlsx  CRYPTO22257.xlsx  CRYPTO22280.xlsx  CRYPTO41350-1.xlsx  CRYPTO41350-2.xlsx  CRYPTO61671.xlsx  CRYPTO61672.xlsx  CRYPTO61673.xlsx  CRYPTO61674.xlsx  CRYPTO61675.xlsx  CRYPTO61676.xlsx  CRYPTO61677.xlsx  CRYPTO61678.xlsx  CRYPTO61679.xlsx  CRYPTO61680.xlsx
tests/: test_match_transactions.py  test_t_row.py  test_transactions.py
tests/parsers/: test_binance.py  test_gemini.py  test_hotbit.py  test_koinly.py  test_kraken.py  test_kucoin.py  test_mexc.py  test_qtwallet.py
tools/: README.md  bittytax_cache.py
(+50 files in other folders)
