[metadata]
name = BittyTax
version = attr: bittytax.version.__version__
author = Nano Nano Ltd
author_email = bittytax@nanonano.co.uk
maintainer = Scott Green
maintainer_email = scott.green@nanonano.co.uk
description = Crypto-currency tax calculator for UK tax rules. Produces a PDF report of your capital gains and income. Import your data from popular wallets and exchanges.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BittyTax/BittyTax
license = AGPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business :: Financial :: Accounting
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = bittytax cryptoasset cryptocurrency cryptotax
project_urls =
    Donate = https://github.com/sponsors/BittyTax
    Twitter = https://twitter.com/bitty_tax
    Discord = https://discord.com/invite/NHE3QFt
    Changes = https://github.com/BittyTax/BittyTax/blob/master/CHANGELOG.md
    Source = https://github.com/BittyTax/BittyTax
    Tracker = https://github.com/BittyTax/BittyTax/issues

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7
install_requires =
    colorama
    defusedxml
    jinja2
    openpyxl
    pypdf>=3.10.0
    python-dateutil
    pyyaml
    requests
    setuptools
    typing_extensions>=4.1.0
    tqdm
    xhtml2pdf
    xlrd
    xlsxwriter

[options.packages.find]
where = src

[options.package_data]
bittytax = config/bittytax.conf, irs_forms/*.pdf, templates/*.html, templates/css/*.html, templates/img/BittyTax300dpi.png

[options.entry_points]
console_scripts =
    bittytax = bittytax.bittytax:main
    bittytax_conv = bittytax.conv.bittytax_conv:main
    bittytax_price = bittytax.price.bittytax_price:main
